--- a/layouts/authors/single.html
+++ b/layouts/authors/single.html
@@ -3,32 +3,9 @@
 <section class="section-sm">
   <div class="container">
     <div class="row justify-content-center text-center">
-      {{ with .Params.image }}
-      <div class="col-lg-10 mb-5 text-center">
-        {{ partial "image.html" (dict "Src" . "Class" "img-fluid rounded" "Alt" "about image") }}
-      </div>
-      {{ end }}
+        {{ partial "list-author.html" (dict "authorPath" "authors/adri-antunez" "showAuthorName" false) }}
 
-      <div class="col-lg-8 text-center">
-        {{ if .Params.caption.enable }}
-        {{ with .Params.caption }}
-        <div class="text-black">{{.title | markdownify}}</div>
-        {{ end }}
-        {{ end }}
-
-        {{ if .Params.social.enable }}
-        {{ with .Params.social }}
-        <ul class="social-links list-unstyled list-inline mt-1">
-          {{ range .social_links }}
-          <li class="list-inline-item"><a href="{{.link | safeURL}}" target="_blank">
-              <i class="lab {{.icon}}"></i>
-            </a></li>
-          {{end}}
-        </ul>
-        {{ end }}
-        {{ end }}
-
-        <div class="content mt-1">
+        <div class="content col-lg-10 mt-1">
           {{.Content}}
         </div>
       </div>
@@ -38,20 +15,20 @@
     {{ with .Params.what_i_do }}
     <div class="section-sm pb-0">
       <div class="row justify-content-center">
-        <div class="col-12 text-center">
-          <h3 class="text-dark font-weight-700 mb-5">{{ .title }}</h3>
+        <div class="col-10 text-center">
+          <h4 class="text-dark">{{ .title }}</h4>
         </div>
         {{ range .item }}
-          <div class="col-lg-4 col-md-4 mt-4 text-center">
+          <div class="col-lg-3 text-center mb-5">
             <i class="{{.icon}} la-4x text-primary mb-4"></i>
-            <h4 class="text-dark font-weight-700 mb-3">{{ .title }}</h4>
+            <h5 class="text-dark mb-3">{{ .title }}</h5>
             <p>{{ .description }}</p>
           </div>
         {{end}}
       </div>
     </div>
-    {{ end }}
-    {{ end }}
+    {{end}}
+    {{end}}
   </div>
 </section>
 
