--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,18 +1,19 @@
 {{define "main"}}
-<div class="container row justify-content-center mx-auto content">
-  <blockquote>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo vel ad consectetur ut aperiam. Itaque eligendi natus aperiam? Excepturi repellendus consequatur quibusdam optio expedita praesentium est adipisci dolorem ut eius!</p>
-  </blockquote>
-</div>
-
 <section class="section-sm">
   <div class="container">
     <div class="row justify-content-center">
-      <div class="col-lg-10">
+      {{ with site.Params.author_in_main}}
+      {{ if .enable }}
+          {{ partial "list-author.html" (dict "authorPath" .author "showAuthorName" .show_name) }}
+        {{end}}
+      {{end}}
+
+      <div class="col-lg-12">
         <div class="row">
+          <h4 class="mb-4">Latest Articles</h4>
           {{ $paginator := .Paginate (where site.RegularPages "Type" "in" site.Params.mainSections) }}
           {{range $index, $items := $paginator.Pages}}
-          <div class="col-lg-10 mx-auto">
+          <div class="col-lg-12 mx-auto">
             {{.Render "post"}}
           </div>
           {{end}}
