--- a/layouts/partials/essentials/footer.html
+++ b/layouts/partials/essentials/footer.html
@@ -1,4 +1,4 @@
-<footer class="section-sm">
+<footer class="section-sm-footer">
   <div class="container">
     <div class="row justify-content-center align-items-center">
       <div class="col-lg-5">
@@ -21,7 +21,7 @@
         {{ end }}
         {{ end }}
       </div>
-      <div class="col-lg-12 text-center mt-5">
+      <div class="col-lg-12 text-center mt-0">
         <ul class="list-inline footer-menu mb-4">
           {{ range site.Menus.footer }}
           <li class="list-inline-item mx-3"><a href="{{.URL | absURL}}">{{.Name}}</a></li>
