--- a/layouts/partials/essentials/script.html
+++ b/layouts/partials/essentials/script.html
@@ -38,7 +38,9 @@
 <!-- cookie consent -->
 {{ partialCached "cookie-consent.html" . }}
 
-{{ if .Params.cloudflare_analytics.enable }}
-<!-- TODO: Make it configurable Cloudflare Web Analytics -->
-<script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "719df5375d68451f87ac7a5904790470"}'></script><!-- End Cloudflare Web Analytics -->
+{{ with site.Params.cloudflare_analytics }}
+{{ if .enable }}
+<!-- Cloudflare Web Analytics -->
+<script defer src='{{.src}}' data-cf-beacon='{"token": "{{.token}}"}'></script><!-- End Cloudflare Web Analytics -->
+{{end}}
 {{end}}
